--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
+<% if @name%>
+  <h1>My name is <%= @name %></h1>
+<% end %>
 <div style='border: 3px dashed red'>
   <img src='http://i.imgur.com/HywxgEV.gif'>
 </div>
-
-<h1>My name is <%= @name %></h>
